# django-group-chat

./: .data.bak.json  .gitignore  README.md  data.json  manage.py  pyproject.toml  render.yaml  todo.md
group_chat/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
main/: apps.py  models.py  persistance.py  urls.py  views.py
main/static/main/: ajax-message.js  func.js  header.css  room.js  script.js  style.css
main/templates/main/: index.html  main_app_base.html  room.html
render/: models.py  persistance.py  views.py
render/static/render/: func.js  header.css
render/templates/render/: index.html  main_app_base.html  room.html
