[tool.poetry]
name = "group-chat"
version = "0.1.0"
description = ""
authors = ["santatra <razafindratsimba34@gmail.com>"]
readme = "README.md"
packages = [{include = "group_chat"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
